# proxysql-admin-webui

./: .cnb.yml  .dockerignore  .editorconfig  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  check_servers.sh  cleanup_and_test_servers.sh  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  fix_proxysql_connection.sh  mkdocs.yml  plan.md  test_api.sh  test_auth_complete.sh  test_comprehensive.sh  test_connection.sh  test_dashboard.sh  test_login.sh  test_rbac.sh  test_refresh.sh  test_runner.sh  test_servers.sh  test_servers_complete.sh  test_tables.sh  test_users.py  update_server_config.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: config.py  database.py  main.py  version.py
backend/app/middleware/: __init__.py  audit.py  body_limit.py  cache_headers.py  csrf.py  metrics.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  backup.py  config_diff.py  dashboard.py  query.py  response.py  scheduler.py  sync.py
backend/app/services/: __init__.py  proxysql.py  (+12 more)
backend/codegen/: emitter.py  gen_fastapi_models.py  parser.py
backend/tests/: __init__.py  conftest.py  run_all_tests.py  test_api_integration.py  test_auth.py  test_backup_service.py  test_codegen.py  test_export_service.py  test_helpers.py  test_password_policy.py  test_schema.py  test_security.py  test_security_headers.py  test_services.py  test_sync.py  test_template_engine.py  test_users.py  test_wizards.py  verify_syntax.py
(+147 files in other folders)
