[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
name = "proxysql-admin-webui"
version = "1.0.0"
description = "Web-based management interface for ProxySQL"
requires-python = ">=3.10"

[tool.ruff]
# Target Python version
target-version = "py310"

# Run on all files in the backend directory
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "*.egg-info",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
# Enable all rules by default, then disable specific ones
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform fn calls in arg defaults (common in FastAPI)
    "SIM108", # use ternary operator (stylistic preference)
]
# Allow unused imports for __init__.py re-exports (middleware, etc.)
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
# Format settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
# Import sorting: force single line for imports that fit
force-single-line = true

